--- a/pages/NewPayrollForm.html
+++ b/pages/NewPayrollForm.html
@@ -152,9 +152,15 @@
                     <button type="reset" class="resetButton button">Reset</button>
                 </div>
             </div>
-
-
         </form>
+        <script>
+            const salary=document.querySelector('#salary');
+            const output=document.querySelector('.salary-output');
+            output.textContent=salary.value;
+            salary.addEventListener('input',function(){
+                output.textContent=salary.value;
+            })
+        </script>
     </div>
 </body>
 
