--- a/pages/NewPayrollForm.html
+++ b/pages/NewPayrollForm.html
@@ -17,6 +17,7 @@
     <header class="header-content header">
         <div class="logo-content">
             <img src="../assets/images/logo.png" alt="logo">
+            <link rel="logo" href="../assets/images/logo.jpg">
             <div>
                 <span class="emp-text">EMPLOYEE</span><br>
                 <span class="emp-text emp-payroll">PAYROLL</span>
