[kajal]:On document Load set Event Listeners

--- a/pages/NewPayrollForm.html
+++ b/pages/NewPayrollForm.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="../css/New_Payroll_From.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
 
-    <script type="text/javascript" src="../js/Employee_Payroll_Form.js"></script>
-    <script type="text/javascript" src="../js/Emploee_Payroll_Data.js"></script>
+    <script type="text/javascript" src="../js/EmployeePayrollForm.js"></script>
+    <script type="text/javascript" src="../js/EmploeePayrollData.js"></script>
     <link rel="logo" href="../assets/images/logo.jpg">
     <title>Employee Payroll App</title>
 </head>
@@ -17,7 +17,7 @@
     <header class="header-content header">
         <div class="logo-content">
             <img src="../assets/images/logo.png" alt="logo">
-            <link rel="logo" href="../assets/images/logo.jpg">
+            
             <div>
                 <span class="emp-text">EMPLOYEE</span><br>
                 <span class="emp-text emp-payroll">PAYROLL</span>
