--- a/pages/EmployeePayollHomePage.html
+++ b/pages/EmployeePayollHomePage.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,600;1,500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/New_Payroll_From.css">
+    <link rel="stylesheet" href="../css/HomePage.css">
     <title>Employee Payroll HomePage</title>
 </head>
 
@@ -21,6 +21,19 @@
             </div>
         </div>
     </header>
+    <div class="main-content">
+        <div class="header-content sub-main-content">
+            <div class="emp-details-text">
+                Employee Details
+                <div class="emp-count"></div>
+            </div>
+            <div onclick="location.href='./NewPayrollForm.html'" class="add-button">
+                <div class="plus-icon">
+                    <img src="../assets/icons/add-24px.svg" alt="Add user logo">
+                </div>
+                <div>Add User</div>
+            </div>
+        </div>
 </body>
 
 </html>
