--- a/pages/EmployeePayollHomePage.html
+++ b/pages/EmployeePayollHomePage.html
@@ -34,6 +34,38 @@
                 <div>Add User</div>
             </div>
         </div>
+        <div class="table-main">
+            <table id="display" class="table">
+                <tr style=" background: #112538 0% 0% no-repeat padding-box;;">
+                    <th></th>
+                    <th style="color: #ffffff">Name</th>
+                    <th style="color: #ffffff">Gender</th>
+                    <th style="color: #ffffff">Department</th>
+                    <th style="color: #ffffff">Salary</th>
+                    <th style="color: #ffffff">Start Date</th>
+                    <th style="color: #ffffff">Actions</th>
+                </tr>
+                <td>
+                    <img class="profile" src="../assets/profile-images/Ellipse -1.png" alt="profile">
+
+                </td>
+                <td>
+                  kajal Mane
+                </td>
+                <td>Female</td>
+                <td>
+                    <div class="dept-label">Engineer</div>
+                    <div class="dept-label">Others</div>
+                </td>
+                <td>370000</td>
+                <td>01 Oct 2021</td>
+                <td>
+                    <img alt="delete" src="../assets/icons/delete-black-18dp.svg">
+                    <img alt="edit" src="../assets/icons/create-black-18dp.svg">
+                </td>
+            </table>
+        </div>
+    </div>
 </body>
 
 </html>
