--- a/pages/EmployeePayollHomePage.html
+++ b/pages/EmployeePayollHomePage.html
@@ -27,7 +27,7 @@
                 Employee Details
                 <div class="emp-count"></div>
             </div>
-            <div onclick="location.href='./NewPayrollForm.html'" class="add-button">
+            <div onclick="location.href='./EmployeePayroll.html'" class="add-button">
                 <div class="plus-icon">
                     <img src="../assets/icons/add-24px.svg" alt="Add user logo">
                 </div>
@@ -36,29 +36,29 @@
         </div>
         <div class="table-main">
             <table id="display" class="table">
-                <tr style=" background: #112538 0% 0% no-repeat padding-box;;">
+                <tr>
                     <th></th>
-                    <th style="color: #ffffff">Name</th>
-                    <th style="color: #ffffff">Gender</th>
-                    <th style="color: #ffffff">Department</th>
-                    <th style="color: #ffffff">Salary</th>
-                    <th style="color: #ffffff">Start Date</th>
-                    <th style="color: #ffffff">Actions</th>
+                    <th>Name</th>
+                    <th>Gender</th>
+                    <th>Department</th>
+                    <th>Salary</th>
+                    <th>StartDate</th>
+                    <th>Actions</th>
                 </tr>
                 <td>
                     <img class="profile" src="../assets/profile-images/Ellipse -1.png" alt="profile">
 
                 </td>
                 <td>
-                  kajal Mane
+                   kajal mane
                 </td>
                 <td>Female</td>
                 <td>
                     <div class="dept-label">Engineer</div>
                     <div class="dept-label">Others</div>
                 </td>
-                <td>370000</td>
-                <td>01 Oct 2021</td>
+                <td>400000</td>
+                <td>1 Oct 2021</td>
                 <td>
                     <img alt="delete" src="../assets/icons/delete-black-18dp.svg">
                     <img alt="edit" src="../assets/icons/create-black-18dp.svg">
