[kajal]:Display Employee Details in Tablur fromat using JSON

--- a/pages/EmployeePayollHomePage.html
+++ b/pages/EmployeePayollHomePage.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,600;1,500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/HomePage.css">
+    <script src="../js/EmployeeHomePageData.js"></script>
     <title>Employee Payroll HomePage</title>
 </head>
 
@@ -25,9 +26,9 @@
         <div class="header-content sub-main-content">
             <div class="emp-details-text">
                 Employee Details
-                <div class="emp-count"></div>
+                <div class="emp-count">10</div>
             </div>
-            <div onclick="location.href='./EmployeePayroll.html'" class="add-button">
+            <div onclick="location.href='./NewPayrollForm.html'" class="add-button">
                 <div class="plus-icon">
                     <img src="../assets/icons/add-24px.svg" alt="Add user logo">
                 </div>
@@ -50,9 +51,9 @@
 
                 </td>
                 <td>
-                   kajal mane
+                  Kajal Mane
                 </td>
-                <td>Female</td>
+                <td>FeMale</td>
                 <td>
                     <div class="dept-label">Engineer</div>
                     <div class="dept-label">Others</div>
