[kajal]: save to local storage

--- a/pages/EmployeePayollHomePage.html
+++ b/pages/EmployeePayollHomePage.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/HomePage.css">
     <script src="../js/EmployeeHomePageData.js"></script>
+    <script src="../js/EmploeePayroll.js"></script>
     <title>Employee Payroll HomePage</title>
 </head>
 
