--- a/pages/NewPayrollForm.html
+++ b/pages/NewPayrollForm.html
@@ -9,6 +9,7 @@
     <script type="text/javascript" src="../js/EmployeePayrollForm.js"></script>
     <script type="text/javascript" src="../js/EmploeePayrollData.js"></script>
     <link rel="logo" href="../assets/images/logo.jpg">
+    <script src="../js/EmploeePayroll.js"></script>
     <title>Employee Payroll App</title>
 </head>
 
